Home page completed

--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -12,7 +12,7 @@
         <nav class="flex justify-between items-center px-6 py-4 max-w-6xl mx-auto">
             <!-- Left Side: Logo & Name -->
             <div class="flex items-center">
-                <img src="/logo.png" alt="Logo" class="w-10 h-10 mr-3">
+                <img src="https://storage.googleapis.com/a1aa/image/Tm-BMWDgytiDt0LsYEdSUqZfwTU_dCio10VimDeA3Z4.jpg" alt="Logo" class="w-10 h-10 mr-3">
                 <span class="text-xl font-bold text-gray-800">HalloTech</span>
             </div>
 
