--- a/views/components/workGameSection.ejs
+++ b/views/components/workGameSection.ejs
@@ -4,7 +4,7 @@
 </section>
 
 <!-- Work Game Features Section -->
-<section class="flex flex-col lg:flex-row items-center justify-between px-6 sm:px-12 py-16 bg-gray-100">
+<section class="flex flex-col lg:flex-row items-center justify-between px-6 sm:px-12 py-16 bg-gray-100 container mx-auto ">
     <!-- Left Side: Features List -->
     <div class="w-full lg:w-1/2 space-y-6">
         <% let features = [
@@ -27,6 +27,6 @@
 
     <!-- Right Side: Image -->
     <div class="w-full lg:w-2/5 flex justify-center mt-10 lg:mt-0">
-        <img src="/images/work-game-banner.jpg" class="max-w-full rounded-2xl shadow-lg hover:shadow-2xl transition duration-500 transform hover:scale-105" alt="Work Game Banner">
+        <img src="/images/work-game-banner.jpg" class="max-w-full rounded-[5rem] shadow-lg " alt="Work Game Banner">
     </div>
 </section>
