--- a/views/components/findTalents.ejs
+++ b/views/components/findTalents.ejs
@@ -11,7 +11,7 @@
     />
   </head>
   <body class="bg-white font-roboto">
-    <div class="relative w-full h-screen">
+    <div class="relative w-full h-screen max-w-6xl mx-auto">
         <img
         alt="A close-up of a laptop with code on the screen and a person's hand on the keyboard"
         class="absolute inset-0 w-full h-full object-cover rounded-3xl filter brightness-50"
