--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -6,12 +6,12 @@
       <div class="flex items-center mb-6 md:mb-0">
         <img
           alt="Company Logo"
-          class="mr-4 w-12 h-12"
-          src="https://storage.googleapis.com/a1aa/image/Tm-BMWDgytiDt0LsYEdSUqZfwTU_dCio10VimDeA3Z4.jpg"
+          class="mr-4 w-28 h-12"
+          src="/images/logo/skynux-logo.png"
         />
         <div>
-          <h1 class="text-2xl font-bold">HALLOTECH.IN</h1>
-          <p class="text-sm">AN IT FREELANCING PLATFORM</p>
+          <h1 class="text-xl font-bold uppercase">Future of freelancing</h1>
+          <!-- <p class="text-sm">AN IT FREELANCING PLATFORM</p> -->
         </div>
       </div>
       <div>
