--- a/views/components/hero.ejs
+++ b/views/components/hero.ejs
@@ -49,7 +49,7 @@
           ideas, and collaborate on exciting projects.
         </p>
         <button
-          class="bg-purple-700 text-white py-1.5 px-6 rounded-full text-lg font-semibold hover:bg-purple-800 transition duration-300"
+          class="bg-purple-950 text-white py-1.5 px-6 rounded-full text-md font-light hover:bg-purple-800 transition duration-300"
         >
           Request Access
         </button>
