--- a/views/components/workGameSection.ejs
+++ b/views/components/workGameSection.ejs
@@ -1,6 +1,6 @@
 <!-- Work Game Section -->
 <section class="text-center py-16 bg-white">
-    <h1 class="text-4xl sm:text-5xl font-normal text-purple-800">Up your work game, it’s easy</h1>
+    <h1 class="text-[5rem] sm:text-5xl font-normal text-purple-800 hover:scale-95 smooth duration-300">Up your work game, it’s easy</h1>
 </section>
 
 <!-- Work Game Features Section -->
