--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,10 @@
 
 
         <%- include('components/postSlider') %>
+
+
+
+        <%- include('components/recentJobSlider') %>
     
 
     <!-- Scrolling Section -->
