--- a/views/components/brandSlider.ejs
+++ b/views/components/brandSlider.ejs
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Freelance Carousel</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/css/style.css">
+
   <style>
     /* Hide default scrollbar */
     .scrollbar-hide::-webkit-scrollbar {
