--- a/views/components/browseJob.ejs
+++ b/views/components/browseJob.ejs
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Browse Talent by Category</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+
     <style>
         body {
             font-family: 'Roboto', sans-serif;
