--- a/views/components/findTalents.ejs
+++ b/views/components/findTalents.ejs
@@ -5,10 +5,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="/css/style.css">
+
   </head>
   <body class="bg-white font-roboto">
     <div class="relative w-full h-screen max-w-6xl mx-auto">
