--- a/views/components/hero.ejs
+++ b/views/components/hero.ejs
@@ -8,10 +8,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="/css/style.css">
+
     <style>
       body {
         font-family: "Roboto", sans-serif;
